--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Coffee Shop </title>
     <!-- CSS Link -->
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <!-- Remix Icon link -->
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
     <!-- header Section -->
@@ -20,10 +25,48 @@
                 <img src="/assets/images/logo.png" alt="">
                 Shah's Café 
             </a>
+
+            <div class="nav__menu">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <i class="ri-home-smile-line"></i>
+                            <span>Home</span>
+                        </a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <i class="ri-award-fill"></i>
+                            <span>About</span>
+                        </a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <i class="ri-compass-discover-fill"></i>
+                            <span>Steps</span>
+                        </a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <i class="ri-chat-1-line"></i>
+                            <span>Testimonials</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </nav>
+
     </header>
     <!-- Main Section -->
+     <main class="main">
+        <!-- Home Section -->
+         <section class="home section" id="home">
 
+         </section>
+     </main>
     <!-- Footer Section -->
 </body>
 </html>
