I edit header section for mobile devices

--- a/index.html
+++ b/index.html
@@ -60,13 +60,27 @@
         </nav>
 
     </header>
-    <!-- Main Section -->
-     <main class="main">
+
+
+     <!-- Main Section -->
+      
         <!-- Home Section -->
          <section class="home section" id="home">
-
-         </section>
-     </main>
+            <div class="home__container container grid">
+                <div class="home__data">
+                    <h1 class="home__title">
+                        Coffee with Shah's Café
+                    </h1>
+                    <p class="home__description">Aroma Therapy Healing with Every Sip</p>
+                    <a href="#" class="btn btn--primary">
+                        View More
+                    </a>
+                </div>
+                <div class="home__image">
+                    <img src="./assets/images/coffeecup1.png" alt="Coffee Beans">
+                </div>
+            </div>
+        </section>
     <!-- Footer Section -->
 </body>
 </html>
