I responsive main section

--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
                     <li class="nav__item">
                         <a href="#" class="nav__link">
                             <i class="ri-award-fill"></i>
-                            <span>About</span>
+                            <span>Coffee</span>
                         </a>
                     </li>
 
                     <li class="nav__item">
                         <a href="#" class="nav__link">
                             <i class="ri-compass-discover-fill"></i>
-                            <span>Steps</span>
+                            <span>Beans</span>
                         </a>
                     </li>
 
                     <li class="nav__item">
                         <a href="#" class="nav__link">
                             <i class="ri-chat-1-line"></i>
-                            <span>Testimonials</span>
+                            <span>Contact</span>
                         </a>
                     </li>
                 </ul>
@@ -72,7 +72,7 @@
                         Coffee with Shah's Café
                     </h1>
                     <p class="home__description">Aroma Therapy Healing with Every Sip</p>
-                    <a href="#" class="btn btn--primary">
+                    <a href="#" class="btn ">
                         View More
                     </a>
                 </div>
