--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <h1 class="home__title">
-                        Coffee with Shah's Café
+                        <span class="coffee-text">Coffee</span> 
+                        <span  style="font-family: black-sterd;">with</span> 
+                        <span id="shah" style="font-family: matter-light;"></span> Shah's Café
                     </h1>
                     <p class="home__description">Aroma Therapy Healing with Every Sip</p>
                     <a href="#" class="btn ">
