I add local fonts

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <section class="home section" id="home">
         <div class="home__container container grid">
             <div class="home__data">
-                <h1 class="home__title">
-                    <span class="coffee-text">Coffee</span><i class="bi bi-cup-hot-fill"></i>
+                <h2 class="home__title">
+                    <span class="coffee-text">Coffee</span><br>
                     <span style="font-family: black-sterd;">with</span>
-                    <span id="shah"></span> Shah's Café
-                </h1>
+                    <span style="font-family: algance;">Shah's Café</span>
+                </h2>
                 <p class="home__description">Aroma Therapy Healing with Every Sip</p>
                 <a href="#" class="btn ">
                     View More
