I solved the UI

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="nav container">
             <a href="#" class="nav__logo">
                 <img src="/assets/images/logo.png" alt="">
-                Shah's Café
+               <span>Shah's Café</span> 
             </a>
 
             <div class="nav__menu">
