I work on responsiveness

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="coffee-cup">
                 <img src="./assets/images/cupremove2.webp" alt="">
 
-                <h2>Cappuccino</h2>
+                <h2>Espresso</h2>
                 <p>100ml Cup</p>
                 <p>Espresso Milk</p>
             </div>
@@ -106,7 +106,7 @@
             <div class="coffee-cup">
                 <img src="./assets/images/cupremove2.webp" alt="">
 
-                <h2>Cappuccino</h2>
+                <h2>Latte</h2>
                 <p>100ml Cup</p>
                 <p>Espresso Milk</p>
             </div>
@@ -114,7 +114,7 @@
             <div class="coffee-cup">
                 <img src="./assets/images/cupremove2.webp" alt="">
 
-                <h2>Cappuccino</h2>
+                <h2>Americano</h2>
                 <p>100ml Cup</p>
                 <p>Espresso Milk</p>
             </div>
@@ -122,14 +122,14 @@
             <div class="coffee-cup">
                 <img src="./assets/images/cupremove2.webp" alt="">
 
-                <h2>Cappuccino</h2>
+                <h2>Flat White</h2>
                 <p>100ml Cup</p>
                 <p>Espresso Milk</p>
             </div>
             <div class="coffee-cup">
                 <img src="./assets/images/cupremove2.webp" alt="">
 
-                <h2>Cappuccino</h2>
+                <h2>Mocha</h2>
                 <p>100ml Cup</p>
                 <p>Espresso Milk</p>
             </div>
@@ -162,17 +162,17 @@
 
             <div class="cold-cup">
                 <img src="./assets/images/cold2.webp" alt="">
-                <h3>Cappuccino</h3>
+                <h3>Espresso</h3>
             </div>
 
             <div class="cold-cup">
                 <img src="./assets/images/cold1.webp" alt="">
-                <h3>Cappuccino</h3>
+                <h3>Mocha</h3>
             </div>
 
             <div class="cold-cup">
                 <img src="./assets/images/cold2.webp" alt="">
-                <h3>Cappuccino</h3>
+                <h3>Flat White</h3>
             </div>
         </div>
     </div>
@@ -209,7 +209,6 @@
                 <img src="./assets/images/beanspacket1.png" alt="">
 
                 <h3>Cappuccino Beans</h3>
-                
                 <p>Espresso Milk</p>
             </div>
 
@@ -229,21 +228,21 @@
                 </div>
             </div>
             <div class="footer-info1">
-                <h3>Privacy</h3>
+                <h3>About Us</h3>
                 <div>
-                    <p>Term of Use</p>
-                    <p>Privacy</p>
+                    <p>Location</p>
+                    <p>Our Story</p>
                 </div>
             </div>
             <div class="footer-info1">
-                <h3>Privacy</h3>
+                <h3>Information</h3>
                 <div>
-                    <p>Term of Use</p>
-                    <p>Privacy</p>
+                    <p>Pricing</p>
+                    <p>Jobs</p>
                 </div>
             </div>
             <div class="footer-info1">
-                <h3 class="contact">Contact</h3>
+                <h3 class="contact">Contact Us</h3>
                 <div class="footer__link">
                     <i class="bi bi-instagram"></i>
                     <i class="bi bi-twitter-x"></i>
