--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <img src="/assets/images/logo.png" alt="">
+                <img src="./assets/images/logo.png" alt="">
                <span>Shah's Café</span> 
             </a>
 
